[gd_scene load_steps=23 format=2]

[ext_resource path="res://Imagenes/Fondo.png" type="Texture" id=1]
[ext_resource path="res://Imagenes/Squares.png" type="Texture" id=2]
[ext_resource path="res://Imagenes/Llenos.png" type="Texture" id=3]
[ext_resource path="res://Imagenes/cuados_vacios.png" type="Texture" id=4]
[ext_resource path="res://Imagenes/2.png" type="Texture" id=5]
[ext_resource path="res://Imagenes/22.png" type="Texture" id=6]
[ext_resource path="res://Imagenes/1.png" type="Texture" id=7]
[ext_resource path="res://Imagenes/11.png" type="Texture" id=8]
[ext_resource path="res://Imagenes/3.png" type="Texture" id=9]
[ext_resource path="res://Imagenes/33.png" type="Texture" id=10]
[ext_resource path="res://Imagenes/regree.png" type="Texture" id=11]
[ext_resource path="res://Imagenes/regree2.png" type="Texture" id=12]
[ext_resource path="res://Scrips/Seleccion_Niveles.gd" type="Script" id=13]
[ext_resource path="res://Musica/sound-14.mp3" type="AudioStream" id=14]
[ext_resource path="res://Musica/sound-2.mp3" type="AudioStream" id=15]
[ext_resource path="res://Musica/y2mate.com - Stellar Dance.mp3" type="AudioStream" id=16]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fondo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Squares:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -397, 539 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Llenos:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2499, 541 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CuadosVacios:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2502, 540 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "animacion_fondo"
length = 120.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fondo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Squares:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2500, 541 ), Vector2( -397, 539 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Llenos:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 30.1, 120 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2499, 541 ), Vector2( -579, 538 ), Vector2( 2500, 535 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CuadosVacios:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 40.1, 120 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2502, 540 ), Vector2( -579, 540 ), Vector2( 2502, 540 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "intro_salida"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.956863 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "intro_salida"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Seleccion_Niveles" type="Node2D"]
script = ExtResource( 13 )

[node name="Fondo" type="Node2D" parent="."]

[node name="Fondo" type="Sprite" parent="Fondo"]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Squares" type="Sprite" parent="Fondo"]
position = Vector2( -397, 539 )
texture = ExtResource( 2 )

[node name="Llenos" type="Sprite" parent="Fondo"]
position = Vector2( 2499, 541 )
texture = ExtResource( 3 )

[node name="CuadosVacios" type="Sprite" parent="Fondo"]
position = Vector2( 2502, 540 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fondo"]
autoplay = "animacion_fondo"
anims/RESET = SubResource( 1 )
anims/animacion_fondo = SubResource( 2 )

[node name="Botones" type="Node2D" parent="."]

[node name="1" type="TextureButton" parent="Botones"]
margin_left = 213.0
margin_top = 393.0
margin_right = 448.0
margin_bottom = 627.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="Botones"]
margin_left = 839.0
margin_top = 397.0
margin_right = 1068.0
margin_bottom = 626.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="Botones"]
margin_left = 1460.0
margin_top = 400.0
margin_right = 1689.0
margin_bottom = 629.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="salir" type="TextureButton" parent="Botones"]
margin_left = 45.0
margin_top = 51.0
margin_right = 183.0
margin_bottom = 189.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir2" type="AudioStreamPlayer" parent="Botones"]
stream = ExtResource( 14 )
volume_db = 10.0

[node name="Seleccion" type="AudioStreamPlayer" parent="Botones"]
stream = ExtResource( 15 )
volume_db = 10.0

[node name="Intro" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Intro"]
margin_left = -10.0
margin_top = -8.0
margin_right = 1928.0
margin_bottom = 1087.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="intro" type="AnimationPlayer" parent="Intro"]
autoplay = "intro_salida"
anims/RESET = SubResource( 3 )
anims/intro_salida = SubResource( 4 )

[node name="salida" type="AnimationPlayer" parent="Intro"]
anims/RESET = SubResource( 5 )
anims/intro_salida = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -16.0

[connection signal="pressed" from="Botones/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Botones/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Botones/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Botones/salir" to="." method="_on_salir_pressed"]
[connection signal="animation_finished" from="Intro/salida" to="." method="_on_salida_animation_finished"]
